--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RECAPTCHA_SITE_KEY=6LfhpSMqAAAAAFwJjjSg3-y_vWYYGaoi4Ndinwwh
 RECAPTCHA_SECRET_KEY=6LfhpSMqAAAAABwYmQwv3ahS7UQDlO7a2xUkXphW
+
+GOOGLE_MAPS_API_KEY=
