update admin form khoi ngheip xúc tien thuong mai,ykdn,tim viec,tuyen dung,dang ky nhu cau von,chang null mail,them required cho cac truong,cap nhat cac thong bao loi

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/TranslationHelper.php"
+            "app/Helpers/TranslationHelper.php",
+            "app/Helpers/FormatCurrencyHelper.php"
         ]
     },
     "autoload-dev": {
