--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ RECAPTCHA_SITE_KEY=6LfhpSMqAAAAAFwJjjSg3-y_vWYYGaoi4Ndinwwh
 RECAPTCHA_SECRET_KEY=6LfhpSMqAAAAABwYmQwv3ahS7UQDlO7a2xUkXphW
 
 GOOGLE_MAPS_API_KEY=
+ZALO_SECRET_KEY=
+ZALO_APP_ID=
